# w3FeTAp

./: .gitignore  ProjectDocumentation.md  README.md  initPhone.sh  logging.conf  pyproject.toml  w3FeTAp.py  w3fetap-service.sh
audio/: README.md  tones.py
bell ringer/: Bell Ringer Layout.diy  README.md
bell ringer/telefon.c/: telefon.c
debug/: audioLoop.py  dail.py  hook.py  ring.py
doc/: Circuits.md  GPIO Pins Used.xcf  Hoock Switch Layout.diy  LED Ctl.diy
src/w3_fetap/: hardware.py  phone.py  tones.py  util.py  w3_fetap_app.py
tests/: callState.py  checkCallState.py  dail.py  document_states.py  hook.py  ledTest.py  mocks.py  test_phone.py
